# rust-shopping

./: .env.example  .gitignore  Cargo.toml  MYSQL_SETUP.md  QUICK_START.md  README.md  Rocket.toml  quick-setup-mysql.sh  setup-mysql-env.bat  setup-mysql-env.sh
migrations/2024-01-01-000001_create_users/: up.sql
migrations/2024-01-01-000002_create_categories/: down.sql  up.sql
migrations/2024-01-01-000003_create_products/: up.sql
migrations/2024-01-01-000004_create_carts/: down.sql  up.sql
migrations/2024-01-01-000005_create_cart_items/: down.sql  up.sql
migrations/2024-01-01-000006_create_orders/: up.sql
migrations/2024-01-01-000007_create_order_items/: down.sql  up.sql
src/: config.rs  database.rs  lib.rs  main.rs  schema.rs
src/controllers/: auth_controller.rs  cart_controller.rs  category_controller.rs  mod.rs  order_controller.rs  product_controller.rs
src/middleware/: auth.rs
src/models/: cart.rs  cart_item.rs  category.rs  mod.rs  order.rs  order_item.rs  product.rs  user.rs
src/utils/: file_upload.rs  mod.rs  pagination.rs
src/views/auth/: login.html  register.html
src/views/cart/: index.html
src/views/layouts/: base.html
src/views/orders/: index.html  show.html
src/views/products/: create.html  index.html  show.html
static/css/: custom.css
static/js/: custom.js
